--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.2",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "next": "13.4.3",
+    "i": "^0.3.7",
+    "next": "^13.4.8",
+    "npm": "^9.7.2",
     "postcss": "8.4.23",
+    "prisma": "^4.16.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "save-dev": "^0.0.1-security",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
