--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.1",
     "@prisma/client": "^4.16.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/validator": "^13.7.17",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "i": "^0.3.7",
     "next": "^13.4.8",
     "npm": "^9.7.2",
@@ -26,6 +29,7 @@
     "react-dom": "18.2.0",
     "save-dev": "^0.0.1-security",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "validator": "^13.9.0"
   }
 }
