Completed sign in user with validation

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@
 
 DATABASE_URL="postgresql://postgres:RfY8MFnQGUIgMULS@db.ntbzrbqhbtlpuarpuvlq.supabase.co:5432/postgres"
 
+JWT_SECRET="afjhsadj3qe219ew}{091@)(930(#U(I48)(#*$()#(djalkjsadfjsnco29i190ed39ej09k(@KE#(*R*EDK09rkdf))))))"
