--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "i": "^0.3.7",
+    "jose": "^4.14.4",
     "next": "^13.4.8",
     "npm": "^9.7.2",
     "postcss": "8.4.23",
