--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.14.1",
     "@prisma/client": "^4.16.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -22,6 +23,7 @@
     "bcrypt": "^5.1.0",
     "i": "^0.3.7",
     "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.1",
     "next": "^13.4.8",
     "npm": "^9.7.2",
     "postcss": "8.4.23",
